# basicini

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/basicini/: CMakeLists.txt  basicini.cpp  basicini.h  basicini_reader.cpp  basicini_reader.h
src/test/: CMakeLists.txt  test.cpp
